force-app/main/default/objects/Activity/fields/Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Affiliate__c</fullName>
    <label>Affiliate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>