force-app/main/default/objects/Activity/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Enter the amount of the proposal.</description>
    <inlineHelpText>Enter the amount of the proposal.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>