force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_Assigned_to_Group_Date__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_Assigned_to_Group_Date__c</fullName>
    <description>Date the Task was assigned to its current Task Group</description>
    <label>Assigned to Group Date</label>
    <type>Date</type>
</CustomField>