force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_Claimed_Date__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_Claimed_Date__c</fullName>
    <description>Date the task was claimed by a member of its associated Task Group</description>
    <label>Claimed Date</label>
    <type>Date</type>
</CustomField>