force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>