force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_Contact_Task__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_Contact_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Contact identified in the Name field is responsible for completing the task.</description>
    <inlineHelpText>Indicates the Contact identified in the Name field is responsible for completing the task.</inlineHelpText>
    <label>Contact Task</label>
    <type>Checkbox</type>
</CustomField>