force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_Days_to_Complete__c</fullName>
    <label>Days to Complete</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>