force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_Due_Date__c</fullName>
    <description>A mirror of the standard ActivityDate field that was initially added so the due date could be used in validation rules and workflows.  Starting with Summer 14&apos; the standard ActivityDate field is  available for use in validation rules, formulas, and workflows so this field should no longer be used.</description>
    <label>Due Date (obsolete)</label>
    <type>Date</type>
</CustomField>