force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_EN_Hidden_Flag__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_EN_Hidden_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should NOT be included on the Event page layout(s).</description>
    <label>InSitu EN Flag - Do Not Place on Layout</label>
    <type>Checkbox</type>
</CustomField>