force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_EN_Visible_Flag__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_EN_Visible_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the field that SHOULD be included on the Event page layout(s).</description>
    <label>Send Notification Email</label>
    <type>Checkbox</type>
</CustomField>