force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_ONTracker__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_ONTracker__c</fullName>
    <description>Special tracking field used by the iTools Delegated Tasks Management Overdue Notification feature.  Do NOT place this field on any Task or Event Page Layout.</description>
    <label>InSituONTracker - Do Not Place on Layout</label>
    <length>100</length>
    <type>Text</type>
</CustomField>