force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_Owner_Not_Responsible__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_Owner_Not_Responsible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InSitu Owner Not Responsible</label>
    <type>Checkbox</type>
</CustomField>