force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_RelatedToOwnerId__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_RelatedToOwnerId__c</fullName>
    <description>Salesforce ID of the owner of the Task&apos;s Related To object.  This field should NOT be added to any page layouts.</description>
    <externalId>true</externalId>
    <label>Related To Owner ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>