force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_RNTracker__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_RNTracker__c</fullName>
    <label>InSituRNTracker - Do Not Place on Layout</label>
    <type>DateTime</type>
</CustomField>