force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_Send_Email_Reminder__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_Send_Email_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Place only on the Task page layouts</description>
    <label>Send Email Reminder</label>
    <type>Checkbox</type>
</CustomField>