force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_Task_Group__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_Task_Group__c</fullName>
    <description>Task Group the task is currently assigned to.  This field is empty if the task is not assigned to a Task Group</description>
    <label>Task Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>