force-app/main/default/objects/Activity/fields/InSituDtm__InSitu_TCN_Flag__c.field-meta.xml
<CustomField>
    <fullName>InSituDtm__InSitu_TCN_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you wish to have the task&apos;s creator notified by e-mail when this task is completed, deleted, re-opened, or its Due Date or Assigned To is changed before it is completed.</inlineHelpText>
    <label>Notify when Complete</label>
    <type>Checkbox</type>
</CustomField>