force-app/main/default/objects/Activity/fields/Objective_Subset__c.field-meta.xml
<CustomField>
    <fullName>Objective_Subset__c</fullName>
    <label>Objective Subset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Final Task</fullName>
            </value>
            <value>
                <fullName>Follow-Up Task</fullName>
            </value>
            <value>
                <fullName>Primary Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>